Implemented doctor search by specialization